objects/Address__c.object
<CustomObject>
    <description>This table contains one record per address. Generally addresses are consolidated from various CW customer records, after the address validation step</description>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Match_Key_Hash__c</fullName>
        <externalId>true</externalId>
        <label>Address Match Key Hash</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Match_Key__c</fullName>
        <label>Address Match Key</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apartment__c</fullName>
        <label>Apartment</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <inlineHelpText>For United States, enter US. 
For Canada, enter CA. 
Leave blank for all other countries.</inlineHelpText>
        <label>Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <formula>Apartment__c &amp; &quot; &quot; &amp; Address_1__c &amp; BR() &amp; 
Address_2__c &amp; IF(LEN(Address_2__c)&gt;0, BR(), &quot;&quot;) &amp; 
City__c &amp; IF(LEN(City__c) &gt; 0, &quot;, &quot;, &quot;&quot;) &amp; State__c &amp; &quot; &quot; &amp; Zip__c &amp; &quot; &quot; &amp; Country_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address_1__c</columns>
        <columns>Address_2__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip__c</columns>
        <columns>Country__c</columns>
        <columns>Country_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>